# 3dfr

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt
src/common/: CMakeLists.txt
src/common/include/: constants.h  data_types.h  shaders.h
src/common/include/glad/: glad.h
src/common/shaders/: FBO.fs  FBO.gs  FBO.vs  bfm_shader.fs  bfm_shader.gs  bfm_shader.vs  bfm_tex.fs  bfm_tex.gs  bfm_tex.vs  pcl_shader.fs  pcl_shader.vs  std_shader.fs  texture_shader.fs  texture_shader.vs
src/common/src/: constants.cpp  glad.c  shaders.cpp
src/dataloader/: CMakeLists.txt
src/dataloader/include/: bfm_loader.h  dataloader.h  rgbd.h
src/dataloader/src/: bfm_loader.cpp  dataloader.cpp  rgbd.cpp
src/recorder/: CMakeLists.txt
src/renderer/: CMakeLists.txt
src/renderer/include/: camera.h  renderer.h
src/renderer/src/: main.cpp  renderer.cpp
src/tracker/: CMakeLists.txt
src/tracker/include/: face_detector.h
src/tracker/src/: face_detector.cpp
